--- a/FleeceMod_bp5.csproj
+++ b/FleeceMod_bp5.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <AssemblyName>FleeceMod_bp5</AssemblyName>
-    <Description>GoldenFleeceFix_bp5</Description>
+    <Description>FleeceMod_bp5</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.Core" Version="5.*" />
+    <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all" />
+    <PackageReference Include="BepInEx.Core" Version="5.4.21" />
+    <PackageReference Include="CultOfTheLamb.GameLibs" Version="1.0.15-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2019.4.40" IncludeAssets="compile" />
   </ItemGroup>
   
@@ -20,11 +21,16 @@
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\Cult Of The Lamb_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
+    <PackageReference Include="CultOfTheLamb.GameLibs" Version="1.0.12-*" />  
+  </ItemGroup>
+  <ItemGroup>    
     <Reference Include="FMODUnity">
       <HintPath>..\..\..\Cult Of The Lamb_Data\Managed\FMODUnity.dll</HintPath>
     </Reference>
+
+    <Reference Include="COTL_API" Private="false">
+      <HintPath>lib\COTL_API.dll</HintPath>
+    </Reference>
+    
   </ItemGroup>
 </Project>
